<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/common_toolbar" />

    <RelativeLayout
        android:layout_width="80dp"
        android:layout_height="75dp"
        android:layout_marginTop="50dp">

        <ImageView
            android:id="@+id/user_info_face"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:background="@drawable/me_face"
            android:scaleType="centerCrop" />

        <ImageView
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:background="@drawable/info_upload" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="45dp"
        android:text="@string/user_info_upload"
        android:textColor="#4C4C4C"
        android:textSize="13dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/user_info_nick_title"
            android:textSize="18sp"
            android:textColor="#4D4D4D"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:text="@string/user_info_nick" />

        <EditText
            android:id="@+id/user_info_nick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/user_info_nick_title"
            android:background="@null"
            android:hint="@string/user_info_nick_hint"
            android:maxLength="34"
            android:singleLine="true"
            android:textColor="#4D4D4D"
            android:textSize="16dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/common_line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/user_info_sex_title"
            android:textSize="18sp"
            android:textColor="#4D4D4D"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:text="@string/user_info_sex" />

        <RadioGroup
            android:id="@+id/user_info_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/user_info_sex_title"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/user_info_sex_m"
                android:textSize="16sp"
                android:textColor="#4D4D4D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight = "1"
                android:button="@null"
                android:gravity="center_vertical"
                android:drawableLeft="@drawable/checke_selector"
                android:drawablePadding="5dp"
                android:text="@string/user_info_sex_m" />

            <RadioButton
                android:id="@+id/user_info_sex_w"
                android:textSize="16sp"
                android:textColor="#4D4D4D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight = "1"
                android:button="@null"
                android:gravity="center_vertical"
                android:drawableLeft="@drawable/checke_selector"
                android:drawablePadding="5dp"
                android:text="@string/user_info_sex_w" />

            <RadioButton
                android:id="@+id/user_info_sex_none"
                android:textSize="16sp"
                android:textColor="#4D4D4D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight = "1"
                android:button="@null"
                android:gravity="center_vertical"
                android:drawableLeft="@drawable/checke_selector"
                android:drawablePadding="5dp"
                android:checked="true"
                android:text="@string/user_info_sex_none" />

        </RadioGroup>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/common_line" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.github.obelieve.ui.ChooseCardView
            android:id="@+id/user_info_city"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:chose_arrow_visibility="GONE"
            app:chose_hint="@string/user_info_city_hint"
            app:chose_title="@string/user_info_city" />

    </FrameLayout>

    <com.github.obelieve.ui.ChooseCardView
        android:id="@+id/user_info_day"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:chose_hint="@string/user_info_day_hint"
        app:chose_title="@string/user_info_day" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/user_info_next"
            android:textSize="18dp"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center"
            android:background="@drawable/common_button_red_selector"
            android:textColor="@color/common_white"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="25dp"
            android:text="@string/common_save" />
    </RelativeLayout>

</LinearLayout>